--- a/package.json
+++ b/package.json
@@ -4,13 +4,20 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon ./index.js"
   },
   "author": "Guilherme Almeida",
   "license": "ISC",
   "dependencies": {
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
-    "mongoose": "^6.0.8"
+    "express-validator": "^6.12.2",
+    "mongoose": "^6.0.8",
+    "nodemon": "^2.0.13"
+  },
+  "engines": {
+    "node": "14.x",
+    "npm": "6.x"
   }
 }
